--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sun Nov 26 04:43:35 CST 2017
-systemProp.http.proxyHost=mirrors.neusoft.edu.cn
+#Sun Nov 26 18:42:32 CST 2017
+systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=80
+systemProp.http.proxyPort=1997
