--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+    compile 'com.android.support:cardview-v7:26.1.0'
     testCompile 'junit:junit:4.12'
 }
