--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MarkText"/>
-        <activity android:name=".ChooseText"
-            android:label="@string/select_default"/>
+        <activity android:name=".MarkText" />
+        <activity
+            android:name=".ChooseText"
+            android:label="@string/select_default" />
+        <activity android:name=".testActivity"></activity>
     </application>
 
 </manifest>
