--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.weigan:loopView:0.1.2'
+    compile 'com.android.support:design:26.1.0'
     testCompile 'junit:junit:4.12'
     implementation 'com.google.code.gson:gson:2.4'
 }
